temp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx # specify the ingress controller, nginx in this case
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: text-next-app
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: hello-node-app
                port:
                  number: 80
